--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   
-    <title>Lab 1</title>
+    <title>Lab 1 - persha</title>
   </head>
   <body>
     <div class="row">
