--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       </script>
   </head>
   <body>
+  <h1>Робота з GitHub</h1>
   <div class="wrapper">
       <nav class="nav">
           <button class="nav__theme">Change theme</button>
