--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-   
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-
       <title>Комп'ютерний практикум №3. Git і GitHub</title>
       <script>
           var Theme_number = 1;
@@ -51,19 +46,23 @@
 
           window.addEventListener("load", initListener);
       </script>
+      <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
   <h1>Робота з GitHub</h1>
   <div class="wrapper">
-      <nav class="nav">
-          <button class="nav__theme">Change theme</button>
-          <ul class="nav__menu">
-              <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">Items</a></li>
-              <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
-          </ul>
-      </nav>
+      <div class="lab-2">
+        <nav class="nav">
+            <button class="nav__theme">Change theme</button>
+            <ul class="nav__menu">
+                <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">About</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Items</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Contact</a></li>
+            </ul>
+        </nav>
+      </div>
 
       <section class="main">
           <div class="main__content">
